--- a/app/views/students/index.html.erb
+++ b/app/views/students/index.html.erb
@@ -1,5 +1,11 @@
 <div>
   <% @students.each do |student| %>
-    <div><%= student.first_name + " " + student.last_name %></div>
+    <h1><%= student.to_s %></h1>
+    <% if student.active %>
+      <p>This student is currently active.</p>
+    <% else %>
+      <p>This student is currently inactive.</p>
+    <% end %>
+    <div><%= link_to student.to_s, student_path(student) %></div>
   <% end %>
 </div>
